@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <link rel="preload" href="/src/scripts/index.js">
+    <script src="/src/scripts/index.js"></script>
     <title>Plantable</title>
   </head>
   <body>
+
     <img class="background-dim" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.constructors.co.nz%2Fwp-content%2Fuploads%2F2018%2F05%2FBlack-Square.png&f=1&nofb=1&ipt=b54f019ab396984b03d36a17e2b737a19886e3d6705d14c184f007bcda4a85b4&ipo=images"></img>
     <header>
       <a href="/">
@@ -92,6 +94,5 @@
     <!-- <script>
       jQuery.ajax
     </script> -->
-    <script src="/src/scripts/index.js"></script>
   </body>
 </html>
