@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <link rel="preload" href="/src/scripts/index.js">
+    <script src="/src/scripts/index.js"></script>
     <title>Settings - Plantable</title>
   </head>
   <body>
@@ -100,6 +102,5 @@
       <iframe src="/bottombar.html" frameborder="0" width="100%" height="35" class="bottombar" id="bottombar"></iframe>
     </footer>
     <script src="src/scripts/settings.js"></script>
-    <script src="/src/scripts/index.js"></script>
   </body>
 </html>
