@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <link rel="preload" href="/src/scripts/index.js">
+    <script src="/src/scripts/index.js"></script>
     <title>Shop - Plantable</title>
   </head>
   <body>
@@ -61,7 +63,7 @@
                 </div>
               </div>
             </a>
-            <a href="#product2" class="shop-card-link">
+            <a href="#plant-enclosure" class="shop-card-link">
               <div class="shop-card" data-cardnum="0">
                 <div class="shop-card-inner">
                   <span>Plant Enclosure (Offsale)</span>
@@ -76,6 +78,5 @@
     <footer>
       <iframe src="/bottombar.html" frameborder="0" width="100%" height="35" class="bottombar" id="bottombar"></iframe>
     </footer>
-    <script src="/src/scripts/index.js"></script>
   </body>
 </html>
